# MasterSelects

./: .browser-logs.json  .dev.vars.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  memory.md  package-lock.json  package.json  tmp_cut_1,58.json  tmp_cut_3,26.json  tsconfig.functions.json  vite.config.ts  wrangler.toml
.github/: FUNDING.yml
.github/workflows/: native-helper-release.yml  security.yml
AI images/: nb2_ms_icon_diamond_v1_meta.txt  nb2_ms_icon_frame_v1_meta.txt  nb2_ms_icon_monogram_v1_meta.txt  nb2_ms_icon_timeline_v1_meta.txt
docs/: cloudflare-hosted-ai-setup.md
docs/Features/: 3D-Layers.md  AI-Integration.md  Debugging.md  Download-Panel.md  Effects.md  Export.md  GPU-Engine.md  Keyframes.md  (+15 more)
functions/: _middleware.ts
migrations/: 0001_users_and_auth.sql  0002_billing_and_subscriptions.sql  0003_credits_and_usage.sql  0004_credit_ledger_source_uniques.sql  0005_chat_logs.sql
public/: _headers
scripts/: dev-full.mjs  visit-notifier.mjs
src/: App.css  App.tsx  RootApp.tsx  changelog-data.json  editorBoot.ts  index.css  main.tsx  version.ts  vite-env.d.ts
tests/: setup.ts
tools/native-helper/: Cargo.toml  README.md
tools/native-helper/python/: matanyone2_server.py
tools/native-helper/scripts/: build-msi.bat
tools/native-helper/src/: main.rs  server.rs  session.rs  tray.rs  utils.rs
tools/native-helper/src/download/: mod.rs  ytdlp.rs
tools/native-helper/src/matanyone/: env.rs  inference.rs  mod.rs  model.rs  process.rs
tools/native-helper/src/protocol/: commands.rs
tools/native-helper/wix/: main.wxs
(+464 files in other folders)
