[package]
name = "masterselects-helper"
version = "0.3.1"
edition = "2021"
authors = ["MasterSelects Team"]
description = "Local control, storage, and download helper for MasterSelects"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "process"] }

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1"
thiserror = "1"
dirs = "5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"

# HTTP for headers parsing and file serving
http = "1"
warp = "0.3"

# Native file dialog (folder picker for Firefox)
rfd = "0.15"

[target.'cfg(windows)'.dependencies]
# Windows-specific APIs for console hiding, message pump, mutex
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell",
    "Win32_System_Console", "Win32_System_Threading",
] }
# System tray icon (Tauri-maintained)
tray-icon = "0.19"
# Registry for auto-start
winreg = "0.55"
# HTTP client for self-update (GitHub Releases API)
ureq = "2"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = 3
